IndexedDB assertion at IDBTransactionBackend::~IDBTransactionBackend() https://bugs.webkit.org/show_bug.cgi?id=128341

Reviewed by Maciej Stachowiak.

Source/WebCore:

* Modules/indexeddb/IDBTransactionBackend.cpp:
(WebCore::IDBTransactionBackend::~IDBTransactionBackend): "Finished" is not the only
  valid value here - In WK2, "Unused" is also valid. Update the ASSERT.

LayoutTests:

* platform/mac-wk2/TestExpectations: Reenable the indexeddb tests that are known to pass.


Canonical link: https://commits.webkit.org/146617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163864 268f45cc-cd09-0410-ab3c-d52691b4dbfc